<resources>
    <string name="app_name">Ed-Easy Agenda</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Username</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Invalid username: >2, Alphanumerics</string>
    <string name="invalid_password">Invalid password: >5, Alphanumerics</string>
    <string name="passwords_dont_match">Your passwords don\'t match</string>
    <string name="login_failed">"Login failed"</string>
    <string name="title_activity_calendar">CalendarActivity</string>
    <string name="title_activity_event_edit">EventEditActivity</string>

    <string name="action_register">Register</string>
    <string name="prompt_confirm_password">Confirm Password</string>
    <string name="prompt_phone">Phone</string>
    <string name="prompt_address">Address</string>
    <string name="prompt_secret_question">Optional Secret Question</string>
    <string name="prompt_secret_answer">Optional Secret Answer</string>
    <string name="action_account_settings">Account Settings</string>
    <string name="action_calendar_settings">Calendar Settings</string>
    <string name="prompt_new_email">New Email</string>
    <string name="prompt_new_password">New Password</string>
    <string name="prompt_new_confirm_password">Confirm new password</string>
    <string name="action_settings">Settings</string>
    <string name="action_save_settings">Save settings</string>
    <string name="action_home">Home</string>
    <string name="user_settings_message">User Name / ID will go here</string>
    <string name="title_activity_event_sync">EventSyncActivity</string>

</resources>
